Made language choice persistent. Added logo.

--- a/src/webui/bs-inline.html
+++ b/src/webui/bs-inline.html
@@ -12033,6 +12033,32 @@ body {
 * {
   outline: 0 !important;
 }
+.psiphon-header {
+  *zoom: 1;
+  padding-top: 5px;
+}
+.psiphon-header:before,
+.psiphon-header:after {
+  display: table;
+  content: "";
+  line-height: 0;
+}
+.psiphon-header:after {
+  clear: both;
+}
+.psiphon-header .logo {
+  padding-left: 2em;
+  padding-right: 2em;
+}
+body[dir="ltr"] .psiphon-header .logo {
+  float: left;
+}
+body[dir="rtl"] .psiphon-header .logo {
+  float: right;
+}
+.psiphon-header .logo img {
+  height: 60px;
+}
 .nav,
 .nav ul {
   margin-bottom: 0;
@@ -16541,7 +16567,10 @@ var RTL_LOCALES = ['devrtl', 'fa', 'ar', 'he'];
 
 $(function() {
   var fallbackLanguage = 'en';
-  var lang = g_initObj.Language || fallbackLanguage;
+
+  // Language priority: cookie, system locale, fallback
+  var lang = getCookie('language') || g_initObj.Language || fallbackLanguage;
+
   i18n.init(
     {
       lang: lang,
@@ -16562,6 +16591,9 @@ function switchLocale(locale) {
     // The content of elements will have changed, so trigger custom event that can
     // be listened for to take additional actions.
     $window.trigger(LANGUAGE_CHANGE_EVENT);
+
+    // Remember the user's choice
+    setCookie('language', locale);
   });
 
   //
@@ -16641,6 +16673,22 @@ function doMatchHeight() {
   }
 }
 
+//
+// We don't have the ability to use real cookies or DOM storage, so we'll store
+// persistent stuff in the registry via the win32 code.
+//
+
+var g_cookies = g_initObj.Cookies ? JSON.parse(g_initObj.Cookies) : {};
+
+function getCookie(name) {
+  return g_cookies[name];
+}
+
+function setCookie(name, value) {
+  g_cookies[name] = value;
+  HtmlCtrlInterface_SetCookies(JSON.stringify(g_cookies));
+}
+
 
 /* INTERFACE METHODS *********************************************************/
 
@@ -16703,6 +16751,12 @@ function HtmlCtrlInterface_SendFeedback(feedbackJSON) {
   }, 1);
 }
 
+function HtmlCtrlInterface_SetCookies(cookiesJSON) {
+  setTimeout(function() {
+    window.location = 'app:setcookies?' + encodeURIComponent(cookiesJSON);
+  }, 1);
+}
+
 
 /* EXPORTS */
 
@@ -16719,8 +16773,11 @@ window.HtmlCtrlInterface_SetState = HtmlCtrlInterface_SetState;
 
 <body dir="ltr">
 
-  <div class="row">
-    <div class="span12 text-center banner">
+  <div class="psiphon-header">
+    <div class="logo">
+      <img src="logo.png">
+    </div>
+    <div class="text-center banner">
       <img src="banner.png">
     </div>
   </div>
