--- a/src/webui/bs.html
+++ b/src/webui/bs.html
@@ -56,8 +56,11 @@
 
 <body dir="ltr">
 
-  <div class="row">
-    <div class="span12 text-center banner">
+  <div class="psiphon-header">
+    <div class="logo">
+      <img src="logo.png">
+    </div>
+    <div class="text-center banner">
       <img src="banner.png">
     </div>
   </div>
