--- a/src/webui/bs.html
+++ b/src/webui/bs.html
@@ -126,7 +126,7 @@
         <div class="tab-pane active fade in" id="connection-pane">
           <div id="connect-toggle">
 
-            <div class="connect-toggle-content invisible well text-center alert"
+            <div class="connect-toggle-content z-behind well text-center alert"
                  data-connect-state="starting"
                  data-match-height=".connect-toggle-content" data-match-height-align="bottom">
               <div>
@@ -141,7 +141,7 @@
               </div>
             </div><!-- /starting -->
 
-            <div class="connect-toggle-content invisible well text-center alert alert-success"
+            <div class="connect-toggle-content z-behind well text-center alert alert-success"
                  data-connect-state="connected"
                  data-match-height=".connect-toggle-content" data-match-height-align="bottom">
               <div>
@@ -156,7 +156,7 @@
               </div>
             </div><!-- /connected -->
 
-            <div class="connect-toggle-content invisible well text-center alert"
+            <div class="connect-toggle-content z-behind well text-center alert"
                  data-connect-state="stopping"
                  data-match-height=".connect-toggle-content" data-match-height-align="bottom">
               <div>
@@ -174,7 +174,7 @@
               </div>
             </div><!-- /stopping -->
 
-            <div class="connect-toggle-content invisible well text-center alert alert-danger"
+            <div class="connect-toggle-content well text-center alert alert-danger"
                  data-connect-state="stopped"
                  data-match-height=".connect-toggle-content" data-match-height-align="bottom">
               <div>
