Fixed the functioning of Backspace and Tab

--- a/src/webui/bs-inline.html
+++ b/src/webui/bs-inline.html
@@ -16920,7 +16920,7 @@ window.HtmlCtrlInterface_SetState = HtmlCtrlInterface_SetState;
               </div>
             </div><!-- /stopping -->
 
-            <div class="connect-toggle-content z-behind well text-center alert alert-danger"
+            <div class="connect-toggle-content well text-center alert alert-danger"
                  data-connect-state="stopped"
                  data-match-height=".connect-toggle-content" data-match-height-align="bottom">
               <div>
