Set banner filename via embeddedvalues. Fix banner height.

--- a/src/webui/bs.html
+++ b/src/webui/bs.html
@@ -61,7 +61,7 @@
       <img src="logo.png">
     </div>
     <div class="text-center banner">
-      <img src="banner.png">
+      <img src="">
     </div>
   </div>
 
