Updated mCtrl to new BEFORENAVIGATION message

--- a/src/webui/bs-inline.html
+++ b/src/webui/bs-inline.html
@@ -16742,6 +16742,8 @@ function setCookie(name, value) {
 
 /* INTERFACE METHODS *********************************************************/
 
+var PSIPHON_LINK_PREFIX = 'psi:';
+
 function HtmlCtrlInterface_AddMessage(jsonArgs) {
   setTimeout(function() {
     addLogMessage(JSON.parse(jsonArgs));
@@ -16762,7 +16764,7 @@ function HtmlCtrlInterface_Start() {
     return;
   }
   setTimeout(function() {
-    var appURL = 'app:start';
+    var appURL = PSIPHON_LINK_PREFIX + 'start';
     if (IS_BROWSER) {
       console.log(appURL);
     }
@@ -16778,7 +16780,7 @@ function HtmlCtrlInterface_Stop() {
     return;
   }
   setTimeout(function() {
-    var appURL = 'app:stop';
+    var appURL = PSIPHON_LINK_PREFIX + 'stop';
     if (IS_BROWSER) {
       console.log(appURL);
     }
@@ -16790,7 +16792,7 @@ function HtmlCtrlInterface_Stop() {
 
 function HtmlCtrlInterface_UpdateSettings(settingsJSON) {
   setTimeout(function() {
-    var appURL = 'app:updatesettings?' + encodeURIComponent(settingsJSON);
+    var appURL = PSIPHON_LINK_PREFIX + 'updatesettings?' + encodeURIComponent(settingsJSON);
     if (IS_BROWSER) {
       console.log(appURL);
     }
@@ -16802,7 +16804,7 @@ function HtmlCtrlInterface_UpdateSettings(settingsJSON) {
 
 function HtmlCtrlInterface_SendFeedback(feedbackJSON) {
   setTimeout(function() {
-    var appURL = 'app:sendfeedback?' + encodeURIComponent(feedbackJSON);
+    var appURL = PSIPHON_LINK_PREFIX + 'sendfeedback?' + encodeURIComponent(feedbackJSON);
     if (IS_BROWSER) {
       console.log(appURL);
     }
@@ -16814,7 +16816,7 @@ function HtmlCtrlInterface_SendFeedback(feedbackJSON) {
 
 function HtmlCtrlInterface_SetCookies(cookiesJSON) {
   setTimeout(function() {
-    var appURL = 'app:setcookies?' + encodeURIComponent(cookiesJSON);
+    var appURL = PSIPHON_LINK_PREFIX + 'setcookies?' + encodeURIComponent(cookiesJSON);
     if (IS_BROWSER) {
       console.log(appURL);
     }
