Added welcome message on language switch

--- a/src/webui/bs-inline.html
+++ b/src/webui/bs-inline.html
@@ -12218,6 +12218,8 @@ body[dir="rtl"] #connect-toggle > .connect-toggle-content {
 .global-alert {
   position: fixed;
   bottom: 0;
+  white-space: nowrap;
+  overflow: hidden;
 }
 body[dir="ltr"] .global-alert {
   right: 0;
@@ -15964,6 +15966,7 @@ case"opacity":k.gradient&&!k[a]("stroke-opacity")&&q(i,{"stroke-opacity":p>1?p/1
       "feedback#top_para_1": "[Ƥŀḗḗȧȧşḗḗ ŀḗḗŧ ŭŭş ķƞǿǿẇ ħǿǿẇ Ƥşīīƥħǿǿƞ īīş ẇǿǿřķīīƞɠ ƒǿǿř ẏǿǿŭŭ şǿǿ ẇḗḗ ƈȧȧƞ ḿȧȧķḗḗ ŧħḗḗ şẏşŧḗḗḿ ƀḗḗŧŧḗḗř!]",
       "feedback#top_para_2": "[Ḿȧȧƞẏ ƥřǿǿƀŀḗḗḿş ƈȧȧƞ ƀḗḗ ƒīīẋḗḗḓ ƀẏ ḓǿǿẇƞŀǿǿȧȧḓīīƞɠ ŧħḗḗ ŀȧȧŧḗḗşŧ ṽḗḗřşīīǿǿƞ. Ẏǿǿŭŭ ƈȧȧƞ <a class=\"NewVersionURL\" href=\"#\">ḓǿǿẇƞŀǿǿȧȧḓ ŧħḗḗ ŀȧȧŧḗḗşŧ ṽḗḗřşīīǿǿƞ ƀẏ ƈŀīīƈķīīƞɠ ħḗḗřḗḗ</a>, ǿǿř ẏǿǿŭŭ ƈȧȧƞ şḗḗƞḓ ȧȧƞ ḗḗḿȧȧīīŀ ŧǿǿ <a class=\"NewVersionEmail\" href=\"#\"></a>.]",
       "feedback#top_para_3": "[Ẏǿǿŭŭ ƈȧȧƞ ȧȧŀşǿǿ ƒīīƞḓ şǿǿŀŭŭŧīīǿǿƞş ŧǿǿ ḿȧȧƞẏ ƈǿǿḿḿǿǿƞ ƥřǿǿƀŀḗḗḿş īīƞ ǿǿŭŭř <a class=\"FaqURL\" href=\"#\">Ƒřḗḗɋŭŭḗḗƞŧŀẏ Ȧȧşķḗḗḓ Ɋŭŭḗḗşŧīīǿǿƞş</a>.]",
+      "language#success-message": "[<strong>Ħḗḗŀŀǿǿ!</strong> Ẇḗḗŀƈǿǿḿḗḗ ŧǿǿ Ƥşīīƥħǿǿƞ.]",
       "messages#show-debug-label": "[Şħǿǿẇ ḓḗḗƀŭŭɠ ḿḗḗşşȧȧɠḗḗş]",
       "nav#connection": "[Ƈǿǿƞƞḗḗƈŧīīǿǿƞ]",
       "nav#feedback": "[Ƒḗḗḗḗḓƀȧȧƈķ]",
@@ -16023,6 +16026,7 @@ case"opacity":k.gradient&&!k[a]("stroke-opacity")&&q(i,{"stroke-opacity":p>1?p/1
       "feedback#top_para_1": "‮Ԁʅǝɐsǝ‬ ‮ʅǝʇ‬ ‮ns‬ ‮ʞuoʍ‬ ‮ɥoʍ‬ ‮Ԁsıdɥou‬ ‮ıs‬ ‮ʍoɹʞıuƃ‬ ‮ɟoɹ‬ ‮ʎon‬ ‮so‬ ‮ʍǝ‬ ‮ɔɐu‬ ‮ɯɐʞǝ‬ ‮ʇɥǝ‬ ‮sʎsʇǝɯ‬ ‮qǝʇʇǝɹ‬!",
       "feedback#top_para_2": "‮Wɐuʎ‬ ‮dɹoqʅǝɯs‬ ‮ɔɐu‬ ‮qǝ‬ ‮ɟıxǝp‬ ‮qʎ‬ ‮poʍuʅoɐpıuƃ‬ ‮ʇɥǝ‬ ‮ʅɐʇǝsʇ‬ ‮ʌǝɹsıou‬. ‮ʎon‬ ‮ɔɐu‬ <a class=\"NewVersionURL\" href=\"#\">‮poʍuʅoɐp‬ ‮ʇɥǝ‬ ‮ʅɐʇǝsʇ‬ ‮ʌǝɹsıou‬ ‮qʎ‬ ‮ɔʅıɔʞıuƃ‬ ‮ɥǝɹǝ‬</a>, ‮oɹ‬ ‮ʎon‬ ‮ɔɐu‬ ‮sǝup‬ ‮ɐu‬ ‮ǝɯɐıʅ‬ ‮ʇo‬ <a class=\"NewVersionEmail\" href=\"#\"></a>.",
       "feedback#top_para_3": "‮ʎon‬ ‮ɔɐu‬ ‮ɐʅso‬ ‮ɟıup‬ ‮soʅnʇıous‬ ‮ʇo‬ ‮ɯɐuʎ‬ ‮ɔoɯɯou‬ ‮dɹoqʅǝɯs‬ ‮ıu‬ ‮onɹ‬ <a class=\"FaqURL\" href=\"#\">‮ɟɹǝbnǝuʇʅʎ‬ ‮∀sʞǝp‬ ‮Ònǝsʇıous‬</a>.",
+      "language#success-message": "<strong>‮Hǝʅʅo‬!</strong> ‮Ｍǝʅɔoɯǝ‬ ‮ʇo‬ ‮Ԁsıdɥou‬.",
       "messages#show-debug-label": "‮Sɥoʍ‬ ‮pǝqnƃ‬ ‮ɯǝssɐƃǝs‬",
       "nav#connection": "‮Ↄouuǝɔʇıou‬",
       "nav#feedback": "‮ɟǝǝpqɐɔʞ‬",
@@ -16115,7 +16119,8 @@ case"opacity":k.gradient&&!k[a]("stroke-opacity")&&q(i,{"stroke-opacity":p>1?p/1
       "feedback#submit_button": "Submit",
       "feedback#text_feedback_bottom_para": "If the above form is not working, or you would like to send screenshots, please email us at <a id=\"FeedbackEmailAddress\" href=\"mailto:feedback+windows@psiphon.ca\">feedback+windows@psiphon.ca</a>.",
       "feedback#success-message": "<strong>Thank you!</strong> Your feedback has been sent.",
-      "messages#show-debug-label": "Show debug messages"
+      "messages#show-debug-label": "Show debug messages",
+      "language#success-message": "<strong>Hello!</strong> Welcome to Psiphon."
     }
   }
 };
@@ -16597,11 +16602,7 @@ function sendFeedback() {
   HtmlCtrlInterface_SendFeedback(JSON.stringify(fields));
 
   // Show (and hide) the success alert
-  $('#feedback-success-alert').toggle('fold', {horizFirst: true}, function() {
-    setTimeout(function() {
-      $('#feedback-success-alert').toggle('fold', {horizFirst: true}, 1000);
-    }, 5000);
-  });
+  displayCornerAlert($('#feedback-success-alert'));
 }
 
 /* LOG MESSAGES **************************************************************/
@@ -16651,23 +16652,34 @@ $(function() {
       resStore: window.PSIPHON.LOCALES
     },
     function(t) {
-      switchLocale(lang);
+      switchLocale(lang, true);
     });
 
   // Populate the list of language choices
   populateLocales();
 });
 
-function switchLocale(locale) {
+function switchLocale(locale, initial) {
   i18n.setLng(locale, function() {
-    $('body').i18n();
+    // This callback does not seem to called asynchronously (probably because
+    // we're loading from an object and not a remote resource). But we want this
+    // code to run after everything else is done, so we'll force it to be async.
 
-    // The content of elements will have changed, so trigger custom event that can
-    // be listened for to take additional actions.
-    $window.trigger(LANGUAGE_CHANGE_EVENT);
+    setTimeout(function() {
+      $('body').i18n();
 
-    // Remember the user's choice
-    setCookie('language', locale);
+      // The content of elements will have changed, so trigger custom event that can
+      // be listened for to take additional actions.
+      $window.trigger(LANGUAGE_CHANGE_EVENT);
+
+      if (!initial) {
+        // Show (and hide) the success alert
+        displayCornerAlert($('#language-success-alert'));
+      }
+
+      // Remember the user's choice
+      setCookie('language', locale);
+    }, 1);
   });
 
   //
@@ -16792,6 +16804,15 @@ function doMatchHeight() {
       }
     });
   }
+}
+
+function displayCornerAlert(elem) {
+  // Show -- and then hide -- the alert
+  $(elem).toggle('fold', {horizFirst: true}, function() {
+    setTimeout(function() {
+      $(elem).toggle('fold', {horizFirst: true}, 1000);
+    }, 5000);
+  });
 }
 
 //
@@ -17366,6 +17387,12 @@ window.HtmlCtrlInterface_SetState = HtmlCtrlInterface_SetState;
   <div id="feedback-success-alert" class="alert alert-success global-alert" style="display:none"
        data-i18n="[html]feedback#success-message">
     <strong>Thank you!</strong> Your feedback has been sent.
+  </div>
+
+  <!-- Don't use the hidden class for this, otherwise the toggle() won't work. -->
+  <div id="language-success-alert" class="alert alert-success global-alert" style="display:none"
+       data-i18n="[html]language#success-message">
+    <strong>Hello!</strong> Welcome to Psiphon.
   </div>
 
 </body>
