--- a/src/webui/bs.html
+++ b/src/webui/bs.html
@@ -521,5 +521,11 @@
     <strong>Thank you!</strong> Your feedback has been sent.
   </div>
 
+  <!-- Don't use the hidden class for this, otherwise the toggle() won't work. -->
+  <div id="language-success-alert" class="alert alert-success global-alert" style="display:none"
+       data-i18n="[html]language#success-message">
+    <strong>Hello!</strong> Welcome to Psiphon.
+  </div>
+
 </body>
 </html>
