Using fancy new font

--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -213,7 +213,7 @@ textarea {
 }
 body {
   margin: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Titillium Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 20px;
   color: #333333;
@@ -899,7 +899,7 @@ input,
 button,
 select,
 textarea {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Titillium Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 label {
   display: block;
@@ -3363,7 +3363,7 @@ input[type="submit"].btn.btn-mini {
 .navbar-search .search-query {
   margin-bottom: 0;
   padding: 4px 14px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Titillium Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 13px;
   font-weight: normal;
   line-height: 1;
@@ -7023,7 +7023,7 @@ textarea {
 }
 body {
   margin: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Titillium Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 20px;
   color: #333333;
@@ -7709,7 +7709,7 @@ input,
 button,
 select,
 textarea {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Titillium Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 label {
   display: block;
@@ -10173,7 +10173,7 @@ input[type="submit"].btn.btn-mini {
 .navbar-search .search-query {
   margin-bottom: 0;
   padding: 4px 14px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Titillium Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 13px;
   font-weight: normal;
   line-height: 1;
@@ -12235,6 +12235,86 @@ body[dir="rtl"] .global-alert {
 }
 img {
   -ms-interpolation-mode: bicubic;
+}
+/*
+ * FONTS
+ */
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: normal;
+  font-weight: 200;
+  src: url('TitilliumWeb-Thin.eot');
+  src: url('TitilliumWeb-Thin.eot') format('embedded-opentype'), url('TitilliumWeb-Thin.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: normal;
+  font-weight: 300;
+  src: url('TitilliumWeb-Light.eot');
+  src: url('TitilliumWeb-Light.eot') format('embedded-opentype'), url('TitilliumWeb-Light.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: normal;
+  font-weight: 400;
+  src: url('TitilliumWeb-Regular.eot');
+  src: url('TitilliumWeb-Regular.eot') format('embedded-opentype'), url('TitilliumWeb-Regular.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: normal;
+  font-weight: 600;
+  src: url('TitilliumWeb-SemiBold.eot');
+  src: url('TitilliumWeb-SemiBold.eot') format('embedded-opentype'), url('TitilliumWeb-SemiBold.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: normal;
+  font-weight: 700;
+  src: url('TitilliumWeb-Bold.eot');
+  src: url('TitilliumWeb-Bold.eot') format('embedded-opentype'), url('TitilliumWeb-Bold.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: normal;
+  font-weight: 900;
+  src: url('TitilliumWeb-Black.eot');
+  src: url('TitilliumWeb-Black.eot') format('embedded-opentype'), url('TitilliumWeb-Black.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: italic;
+  font-weight: 200;
+  src: url('TitilliumWeb-ThinItalic.eot');
+  src: url('TitilliumWeb-ThinItalic.eot') format('embedded-opentype'), url('TitilliumWeb-ThinItalic.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: italic;
+  font-weight: 300;
+  src: url('TitilliumWeb-LightItalic.eot');
+  src: url('TitilliumWeb-LightItalic.eot') format('embedded-opentype'), url('TitilliumWeb-LightItalic.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: italic;
+  font-weight: 400;
+  src: url('TitilliumWeb-Italic.eot');
+  src: url('TitilliumWeb-Italic.eot') format('embedded-opentype'), url('TitilliumWeb-Italic.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: italic;
+  font-weight: 600;
+  src: url('TitilliumWeb-SemiBoldItalic.eot');
+  src: url('TitilliumWeb-SemiBoldItalic.eot') format('embedded-opentype'), url('TitilliumWeb-SemiBoldItalic.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: italic;
+  font-weight: 700;
+  src: url('TitilliumWeb-BoldItalic.eot');
+  src: url('TitilliumWeb-BoldItalic.eot') format('embedded-opentype'), url('TitilliumWeb-BoldItalic.ttf') format('truetype');
 }
 
 </style>
@@ -15944,7 +16024,7 @@ case"opacity":k.gradient&&!k[a]("stroke-opacity")&&q(i,{"stroke-opacity":p>1?p/1
   <script>
 (window.PSIPHON || (window.PSIPHON={})).LOCALES = {
   "devltr": {
-    "name": "[Ƥȧȧƈķȧȧɠḗḗḓ Ȧȧƈƈḗḗƞŧḗḗḓ]",
+    "name": "devltr",
     "translation": {
       "connection#connect-btn": "[Ƈǿǿƞƞḗḗƈŧ]",
       "connection#connected-msg": "[Ƥşīīƥħǿǿƞ īīş ƈǿǿƞƞḗḗƈŧḗḗḓ]",
@@ -16004,7 +16084,7 @@ case"opacity":k.gradient&&!k[a]("stroke-opacity")&&q(i,{"stroke-opacity":p>1?p/1
     }
   },
   "devrtl": {
-    "name": "Ԁɐɔʞɐƃǝp‬ ‮Wıɹɹoɹǝp",
+    "name": "devrtl",
     "translation": {
       "connection#connect-btn": "‮Ↄouuǝɔʇ‬",
       "connection#connected-msg": "‮Ԁsıdɥou‬ ‮ıs‬ ‮ɔouuǝɔʇǝp‬",
