Added missing locales names file

--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -16024,7 +16024,7 @@ case"opacity":k.gradient&&!k[a]("stroke-opacity")&&q(i,{"stroke-opacity":p>1?p/1
   <script>
 (window.PSIPHON || (window.PSIPHON={})).LOCALES = {
   "devltr": {
-    "name": "devltr",
+    "name": "[Ƥȧȧƈķȧȧɠḗḗḓ Ȧȧƈƈḗḗƞŧḗḗḓ]",
     "translation": {
       "connection#connect-btn": "[Ƈǿǿƞƞḗḗƈŧ]",
       "connection#connected-msg": "[Ƥşīīƥħǿǿƞ īīş ƈǿǿƞƞḗḗƈŧḗḗḓ]",
@@ -16084,7 +16084,7 @@ case"opacity":k.gradient&&!k[a]("stroke-opacity")&&q(i,{"stroke-opacity":p>1?p/1
     }
   },
   "devrtl": {
-    "name": "devrtl",
+    "name": "Ԁɐɔʞɐƃǝp‬ ‮Wıɹɹoɹǝp",
     "translation": {
       "connection#connect-btn": "‮Ↄouuǝɔʇ‬",
       "connection#connected-msg": "‮Ԁsıdɥou‬ ‮ıs‬ ‮ɔouuǝɔʇǝp‬",
