Added Settings Reset button. Cleaned up connect button a bit

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -211,6 +211,12 @@
             <strong>Error!</strong> Please fix incorrect values before proceeding.
           </div>
 
+          <div class="settings-reset">
+            <a href="#" class="btn" data-i18n="settings#reset-button">
+              Reset to Default
+            </a>
+          </div>
+
           <form class="vpn-incompatible">
             <fieldset>
               <legend>
