--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -12159,6 +12159,25 @@ body[dir="rtl"] #connect-toggle > .connect-toggle-content {
 .port-entry {
   width: 5em;
 }
+.settings-reset {
+  *zoom: 1;
+  margin-top: 5px;
+}
+.settings-reset:before,
+.settings-reset:after {
+  display: table;
+  content: "";
+  line-height: 0;
+}
+.settings-reset:after {
+  clear: both;
+}
+body[dir="ltr"] .settings-reset a {
+  float: right;
+}
+body[dir="rtl"] .settings-reset a {
+  float: left;
+}
 /* FEEDBACK */
 .feedback-smiley-container {
   margin-left: 5px;
@@ -12232,9 +12251,13 @@ body[dir="rtl"] .global-alert {
 }
 .z-behind {
   z-index: -2;
+  opacity: 0;
+  filter: alpha(opacity=0);
 }
 .z-infront {
   z-index: 2;
+  opacity: 1;
+  filter: alpha(opacity=100);
 }
 img {
   -ms-interpolation-mode: bicubic;
@@ -16071,6 +16094,7 @@ case"opacity":k.gradient&&!k[a]("stroke-opacity")&&q(i,{"stroke-opacity":p>1?p/1
       "settings#local-proxy-ports#leave-blank": "[Ŀḗḗȧȧṽḗḗ ƀŀȧȧƞķ ƒǿǿř ȧȧŭŭŧǿǿḿȧȧŧīīƈ ƥǿǿřŧ şḗḗŀḗḗƈŧīīǿǿƞ (řḗḗƈǿǿḿḿḗḗƞḓḗḗḓ).]",
       "settings#local-proxy-ports#socks-label": "[ŞǾǿƇĶŞ]",
       "settings#port-value-error-msg": "[Ḿŭŭşŧ ƀḗḗ ƀḗḗŧẇḗḗḗḗƞ 1 ȧȧƞḓ 65535.]",
+      "settings#reset-button": "[Řḗḗşḗḗŧ ŧǿǿ Ḓḗḗƒȧȧŭŭŀŧ]",
       "settings#split-tunnel#enable-label": "[Ḓǿǿƞ'ŧ ƥřǿǿẋẏ ḓǿǿḿḗḗşŧīīƈ ẇḗḗƀşīīŧḗḗş]",
       "settings#split-tunnel#heading": "[Şƥŀīīŧ Ŧŭŭƞƞḗḗŀ]",
       "settings#split-tunnel#help-text": "[Īīƒ ḗḗƞȧȧƀŀḗḗḓ, řḗḗɋŭŭḗḗşŧş ḿȧȧḓḗḗ ŧǿǿ şḗḗřṽḗḗřş ẇīīŧħīīƞ ẏǿǿŭŭř ħǿǿḿḗḗ ƈǿǿŭŭƞŧřẏ ẇīīŀŀ ƞǿǿŧ ƀḗḗ ŧŭŭƞƞḗḗŀḗḗḓ ŧħřǿǿŭŭɠħ Ƥşīīƥħǿǿƞ.]",
@@ -16131,6 +16155,7 @@ case"opacity":k.gradient&&!k[a]("stroke-opacity")&&q(i,{"stroke-opacity":p>1?p/1
       "settings#local-proxy-ports#leave-blank": "‮˥ǝɐʌǝ‬ ‮qʅɐuʞ‬ ‮ɟoɹ‬ ‮ɐnʇoɯɐʇıɔ‬ ‮doɹʇ‬ ‮sǝʅǝɔʇıou‬ (‮ɹǝɔoɯɯǝupǝp‬).",
       "settings#local-proxy-ports#socks-label": "‮SOↃӼS‬",
       "settings#port-value-error-msg": "‮Wnsʇ‬ ‮qǝ‬ ‮qǝʇʍǝǝu‬ 1 ‮ɐup‬ 65535.",
+      "settings#reset-button": "‮ᴚǝsǝʇ‬ ‮ʇo‬ ‮pǝɟɐnʅʇ‬",
       "settings#split-tunnel#enable-label": "‮pou‬'‮ʇ‬ ‮dɹoxʎ‬ ‮poɯǝsʇıɔ‬ ‮ʍǝqsıʇǝs‬",
       "settings#split-tunnel#heading": "‮Sdʅıʇ‬ ‮⊥nuuǝʅ‬",
       "settings#split-tunnel#help-text": "‮Iɟ‬ ‮ǝuɐqʅǝp‬, ‮ɹǝbnǝsʇs‬ ‮ɯɐpǝ‬ ‮ʇo‬ ‮sǝɹʌǝɹs‬ ‮ʍıʇɥıu‬ ‮ʎonɹ‬ ‮ɥoɯǝ‬ ‮ɔonuʇɹʎ‬ ‮ʍıʅʅ‬ ‮uoʇ‬ ‮qǝ‬ ‮ʇnuuǝʅǝp‬ ‮ʇɥɹonƃɥ‬ ‮Ԁsıdɥou‬.",
@@ -16162,6 +16187,7 @@ case"opacity":k.gradient&&!k[a]("stroke-opacity")&&q(i,{"stroke-opacity":p>1?p/1
       "connection#stopped-msg": "Psiphon is disconnected",
       "connection#connect-btn": "Connect",
       "settings#error-alert": "<strong>Error!</strong> Please fix incorrect values before proceeding.",
+      "settings#reset-button": "Reset to Default",
       "settings#egress-region#heading": "Psiphon server region",
       "settings#egress-region#select-label": "Select desired Psiphon server region:",
       "settings#egress-region#select-best-performance": "Best Performance",
@@ -16432,6 +16458,8 @@ $(function() {
 
   fillSettingsValues(g_initObj.Settings);
 
+  $('.settings-reset a').click(onSettingsReset);
+
   // Some fields are disabled in VPN mode
   $('#VPN').change(vpnModeUpdate);
   vpnModeUpdate();
@@ -16517,6 +16545,11 @@ function fillSettingsValues(obj) {
   $('body select').each(function() {
     if (this.refresh) this.refresh();
   });
+}
+
+function onSettingsReset(e) {
+  e.preventDefault();
+  fillSettingsValues(g_initObj.Settings.defaults);
 }
 
 // Packages the current settings into JSON string. Returns if invalid value found.
@@ -16718,7 +16751,7 @@ function addLogMessage(obj) {
 
 /* LANGUAGE ******************************************************************/
 
-var RTL_LOCALES = ['devrtl', 'fa', 'ar', 'he'];
+var RTL_LOCALES = ['devrtl', 'fa', 'ar' ];
 
 $(function() {
   var fallbackLanguage = 'en';
@@ -17164,6 +17197,12 @@ window.HtmlCtrlInterface_SetState = HtmlCtrlInterface_SetState;
           <div class="alert alert-error affix value-error-alert hidden"
                data-i18n="[html]settings#error-alert">
             <strong>Error!</strong> Please fix incorrect values before proceeding.
+          </div>
+
+          <div class="settings-reset">
+            <a href="#" class="btn" data-i18n="settings#reset-button">
+              Reset to Default
+            </a>
           </div>
 
           <form class="vpn-incompatible">
